# nonebot-plugin-moellmchats

./: README.md  pyproject.toml
docs/prompt-overlay/: 00-execution-checklist.md
nonebot_plugin_moellmchats/: Config.py  ImageCache.py  ImageMemory.py  MessagesHandler.py  ModelSelector.py  TemperamentManager.py  __init__.py  access_control.py  moe_llm.py  prompt_templates.py  response_utils.py  trigger_rules.py  utils.py
tests/: test_group_trigger.py  test_moe_llm_image_tools.py  test_prompt_templates.py  test_response_utils.py
